# whispercpp-utils

./: README.md
scripts/: normalize_wav.sh  record_wav.sh  transcribe.sh  whispercpp-start.sh
stream_stt/: README.md  pyproject.toml
stream_stt/src/stream_stt/: audio_input.py  cli.py  daemon.py  stt_output.py
systemd/: stream-stt.service  vad-stt.service  whisper-server.service
vad_stt/: README.md  pyproject.toml  requirements.txt
vad_stt/src/vad_stt/: cli.py  daemon.py  stt_output.py  vad_input.py
